<resources>
    <string name="app_name">Love Push</string>
    <string name="facebook_app_id" translatable="false">664377490884177</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb664377490884177</string>
    <string name="google_places_api_key" translatable="false">AIzaSyA5sAjRYPFFaiFkQeR1BVdTL8egbHLAG9U</string>
    <string name="server_error">Internal Server Error</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="api_crashed">An error occurred</string>
    <string name="please_select_item">Please select item</string>
    <string name="done">Done</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_account">Don\'t have a account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="forgot">Forgot</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trans">Other</string>
    <string name="faq">FAQ</string>
    <string name="setting">Settings</string>
    <string name="notification">Notifications</string>
    <string name="explore">Explore</string>
    <string name="change_pass">Change Password</string>
    <string name="rest_face">Restrict Facebook Friends</string>
    <string name="old_pass">Old Password</string>
    <string name="change">Change</string>
    <string name="select_love_push_intension">Select Love Push Intention</string>
    <string name="select_relationship">Select Relationship</string>
    <string name="languages">Languages</string>
    <string name="size">Size</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="fvrt">Favorite Travel Destinations</string>
    <string name="hobbies">Hobbies</string>
    <string name="sexual_orientation">Sexual Orientation</string>
    <string name="submit">Submit</string>
    <string name="dummy_date">dd-mm-yyyy</string>
    <string name="dummy_short">THis is a loren ipsum</string>
    <string name="dummy">dummy</string>
    <string name="messages">Messages</string>
    <string name="dummy_noti"><b>User One</b> likes your photo</string>
    <string name="profile">Profile</string>
    <string name="images">Posts</string>
    <string name="bio">About me</string>
    <string name="dummy_long">Eum et labore erroribus incorrupte. Ius alienum eligendi te, ut nec legere impetus regione. Ius id recusabo pertinax, eu illud epicuri explicari pro. His veritus tibique vituperatoribus ne. Ea eam atqui novum percipitur, quo id error oratio gloriatur. Deleniti electram ea cum, vitae fierent facilisi te ius, purto blandit pri ei. Est copiosae tractatos assentior et, ut cum iusto minimum ullamcorper.</string>
    <string name="dummy_mid">Eum et labore erroribus incorrupte. Ius alienum eligendi te, ut nec legere impetus regione. Ius id recusabo pertinax, eu illud epicuri explicari pro. His veritus tibique vituperatoribus ne. Ea eam atqui novum percipitur, quo id error oratio gloriatur.</string>
    <string name="create_profile">Create Profile</string>
    <string name="personal_test">Personality Test</string>
    <string name="ad_feed">Ad Feed</string>
    <string name="connect_ad">Connect Ad</string>
    <string name="love_ad">Love Ad</string>
    <string name="cancel">Cancel</string>
    <string name="filter_by_city">Filter by City</string>
    <string name="select_city">Select City</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="set_location">Set Location</string>
    <string name="post_anony">Post Anonymously</string>
    <string name="post">Post</string>
    <string name="post_ad">Post Ads</string>
    <string name="recommended_pro">Recommended Profiles</string>
    <string name="set_radius">Set Radius</string>
    <string name="online">Online</string>
    <string name="error_username">Please Enter Username</string>
    <string name="length_username">Username should be of minimum 3 characters</string>
    <string name="length_name">Name should be of minimum 3 characters</string>
    <string name="error_old_password">Please enter valid old password. Minimum 6 Characters.</string>
    <string name="error_password">Please enter valid password. Minimum 6 Characters.</string>
    <string name="error_name">Please enter name</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="error_phone">Please enter the valid phone number. Phone number length will be between 10 to 15.</string>
    <string name="error_pass_not_matched">Password not matched</string>
    <string name="error_gender">Please select gender</string>
    <string name="no_question_found">No Question found</string>
    <string name="error_post_title">Please enter post title</string>
    <string name="error_post_desc">Please enter post description</string>
    <string name="error_post_ad_type">Please select add type</string>
    <string name="error_post_image">Please select image</string>
    <string name="error_post_location">Please select your location</string>
    <string name="km">KM</string>
    <string name="api_time_out">Api time out</string>
    <string name="we_need">We need to text you the OTP to authenticate your account.</string>
    <string name="we_need_send_email">We have sent an OTP on your email \n also check spam folder</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="reset_pass">Reset Your Password</string>
    <string name="error_otp">Please enter the OTP</string>
    <string name="verify">Verify</string>
    <string name="i_accept_term_privacy">I accept Terms and Condition and Legacy</string>
    <string name="newest_match">Newest Match</string>
    <string name="filter">Filter</string>
    <string name="partner_preferences">Set Partner Preferences</string>
    <string name="current_sub_plan">Current Subscription Details</string>
    <string name="privacy_setting"><![CDATA[Legacy (T&C and Legacy Policy)]]></string>
    <string name="set_language">Set Language</string>
    <string name="english">English</string>
    <string name="edit_search">Search</string>
    <string name="hide_me_from_search">Hide Me From Search</string>
    <string name="stop_private_message">Stop Private Message</string>
    <string name="prefernces">Preferences</string>
    <string name="select_age">Select Age</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="edit_profile">Update Profile</string>
    <string name="job_emp"><![CDATA[Job & Employer]]></string>
    <string name="religion">Religion</string>
    <string name="relationship">Relationship</string>
    <string name="friendship">Friendship</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="no_expactations">No Expectations</string>
    <string name="single">Single</string>
    <string name="in_relationship">In relationship</string>
    <string name="married">Married</string>
    <string name="recently_separated">Recently separated</string>
    <string name="open_relationship">Open relationship</string>
    <string name="heterosexual">Heterosexual</string>
    <string name="bisexual">Bisexual</string>
    <string name="homosexual">Homosexual</string>
    <string name="physique">Physique</string>
    <string name="plump">Plump</string>
    <string name="thin">Thin</string>
    <string name="athletic">Athletic</string>
    <string name="muscular">Muscular</string>
    <string name="normal">Normal</string>
    <string name="error_age">Please select age</string>
    <string name="error_dob">Please select date of birth</string>
    <string name="max_three_select">Maximum Three Option Selected</string>
    <string name="verify_email">Verify Your Email</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="client_id">198946952372512</string>
    <string name="callback_url">https://www.love-push-1.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="images2">Images</string>
    <string name="age">Age</string>
    <string name="looking_for">Looking for</string>
    <string name="fav_travel">Favourite Travel Destination</string>
    <string name="london">London</string>
    <string name="about_me">About me</string>
    <string name="transgender">Other</string>
    <string name="love_push">Love Push</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="dlg_loading">Loading…</string>
    <string name="error_leave_chat">error leave chat</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dlg_retry">Retry</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Message</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="notification_title">Love Push Notification</string>
    <string name="dlg_login">Login…</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="new_chat_created">%s created new chat </string>
    <string name="occupant_added">%s added %s</string>
    <string name="occupant_left">%s has left</string>
    <string name="select_users_get_dialog_error">Error getting dialog from server</string>
    <string name="added_users">The users have been added</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="restriction_upload_files">Max attachment number: %d</string>
    <string name="chat_still_joining">You\'re still joining a group chat, please wait a bit</string>
    <string name="chat_error_send_message">Can\'t send a message, You are not connected to chat</string>
    <string name="dialog_retry">Retry</string>
    <string name="statuses_delivered">Delivered</string>
    <string name="statuses_read">Read</string>
    <string name="statuses_sent">Sent</string>
    <string name="no_server_connection">Server connection timeout</string>
    <string name="error">Error</string>
    <string name="receive_chat_request">Receive Chat Request</string>
    <string name="receive_love_request">Receive Love Request</string>
    <string name="support">Support</string>
    <string name="community_guide">Community Guidelines</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="membership">Membership</string>
</resources>