<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SupportActivity">

    <include layout="@layout/tool_back_login" />

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/edit_layout"
            >
            <androidx.appcompat.widget.AppCompatEditText

                android:id="@+id/nameET"
                style="@style/edit_text"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </LinearLayout>




        <LinearLayout
            style="@style/edit_layout">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/subjectET"
            style="@style/edit_text"
            android:hint="@string/subject"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
        </LinearLayout>

<LinearLayout
    style="@style/edit_layout">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/messageET"
            style="@style/edit_text_multi"
            android:lines="5"
            android:maxLines="5"
            android:hint="@string/message"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
</LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBTN"
            style="@style/bg_button"
            android:text="@string/submit" />

    </LinearLayout>


</LinearLayout>