<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_12dp"
    android:paddingTop="@dimen/dimen_20dp"
    android:paddingRight="@dimen/dimen_12dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:singleLine="true"
        android:text="@string/filter_by_city"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_18pixels"
        app:textAllCaps="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/bg_round_et"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/edit_text"
            android:drawableRight="@drawable/arrow_down"
            android:hint="@string/select_city"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_B"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_mid_grey"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14pixels" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:id="@+id/submit_B"
            android:background="@drawable/bg_button_mid_primary"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14pixels" />

    </LinearLayout>


</LinearLayout>
